# Synthik

./: README.md  project.json
backend/: .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3922909088bf_remove_the_not_null_constraints.py  3b706640cb26_feat_check_for_changes_to_the_models.py  4339d2e2da21_update_the_details.py  6dbac9d70c49_initial.py  80a824a0fb66_initialize_migrations.py  d3b6fbe4df92_feat_revert_the_changes_on_the_ml_model.py  df1465132480_update_the_ai_training_jobs.py  ed09ba6e4915_added_the_neew_data_fields.py
backend/app/: main.py
backend/app/ai_agents/: enterprise_agents.py  enterprise_workflow.py  llm.py  models.py  routes.py  schemas.py  services.py
backend/app/ai_training/: __init__.py  models.py  routes.py  schemas.py  services.py
backend/app/ai_verification/: routes.py  schemas.py  services.py
backend/app/annotations/: models.py  routes.py  schemas.py  services.py
backend/app/auth/: models.py  routes.py  schemas.py  services.py
backend/app/campaigns/: models.py  routes.py  schemas.py  services.py
backend/app/celery/: celery.py
backend/app/core/: __init__.py  constants.py  database.py  exceptions.py  helpers.py  logger.py  redis.py  types.py
backend/app/dataset/: models.py  routes.py  schemas.py  services.py
backend/app/generation/: csv_llm.py  (+7 more)
backend/scripts/: celery_worker.sh  export_path.sh  faststream.sh  install_ffmeg.sh  main.sh  pr_process.sh  setup.sh  setup_pre_commit.sh  start_celery_beat.sh  start_walrus.sh
backend/tests/: conftest.py  test_datasets.py  test_generation.py
backend/training_scripts/: download_and_reconstruct.py  requirements.txt  train_clm.py  train_image_classifier.py  train_text_classifier.py  train_text_lora.py  upload_and_register.py
synthik-py-sdk/: README.md  pyproject.toml
synthik-py-sdk/synthik_py_sdk/: cli.py  client.py  exceptions.py  models.py  utils.py
(+169 files in other folders)
