[tool.poetry]
name = "synthik-backend"
version = "0.1.0"
description = ""
authors = ["mannyuncharted <omoebun52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.38"
fastapi = "^0.115.8"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.1"
uvicorn = "^0.34.0"
celery = "^5.4.0"
scalar-fastapi = "^1.0.3"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
openai = "^1.64.0"
langchain = "^0.3.19"
langchain-openai = "^0.3.6"
pypdf2 = "^3.0.1"
pandas = "^2.2.3"
python-multipart = "^0.0.20"
python-docx = "^1.1.2"
redis = "^5.2.1"
atoma-sdk = "^0.1.3"
langchain-google-genai = "^2.1.4"
langgraph = "^0.4.5"
langchain-core = "^0.3.60"
boto3 = "^1.35.75"
aiobotocore = "^2.13.1"
cryptography = "^45.0.2"
typing-extensions = "^4.13.2"
google-genai = "^1.15.0"
tavily-python = "^0.7.2"
aiofiles = "^24.1.0"
google-cloud-storage = "~2.0"
huggingface-hub = "^0.31.2"
sagemaker = "^2.244.2"
google-cloud-aiplatform = "^1.93.1"
setuptools = "^80.8.0"
pdfplumber = "^0.11.6"
datasets = "^3.6.0"
aios = "^0.1"
numpy = "^1.22.4"
multiformats = "^0.3.1.post4"
ipld-dag-pb = "^0.0.1"
ipld-car = "^0.0.1"
ipfshttpclient = "^0.7.0"
structlog = "^25.4.0"
supabase = "^2.16.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"